--- a/public/index.html
+++ b/public/index.html
@@ -2,8 +2,14 @@
 <html lang="en">
 
 <head>
-    <meta charset="UTF-8">
+    <meta charset="utf-8" />
+    <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <title>Circle</title>
+    <meta name=viewport content="width=device-width,initial-scale=1,user-scalable=no">
+    <meta name=HandheldFriendly content=True>
+    <meta name=MobileOptimized content=640>
+    <meta http-equiv=cleartype content=on>
+    <meta name=format-detection content="telephone=yes"> 
 
     <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/materialize/0.97.8/css/materialize.min.css">
     <link rel="stylesheet" href="https://fonts.googleapis.com/icon?family=Material+Icons">
@@ -30,10 +36,10 @@
             </div>
         </div>
         <div class="row" v-if="joined">
-            <div class="input-field col s8">
+            <div class="input-field col s7">
                 <input type="text" v-model="newMsg" @keyup.enter="send">
             </div>
-            <div class="input-field col s4">
+            <div class="input-field col s5">
                 <button class="waves-effect waves-light btn" @click="send">
                     <i class="material-icons right">chat</i>
                     Send
@@ -41,10 +47,10 @@
             </div>
         </div>
         <div class="row" v-if="!joined">
-            <div class="input-field col s8">
+            <div class="input-field col s7">
                 <input type="text" v-model.trim="username" placeholder="Username" @keyup.enter="join()">
             </div>
-            <div class="input-field col s4">
+            <div class="input-field col s5">
                 <button class="waves-effect waves-light btn" @click="join()">
                     <i class="material-icons right">done</i>
                     Join
@@ -59,7 +65,6 @@
     <script src="https://unpkg.com/vue-cookies@1.5.7/vue-cookies.js"></script>
     <script src="https://cdn.jsdelivr.net/emojione/2.2.6/lib/js/emojione.min.js"></script>
     <script src="https://code.jquery.com/jquery-2.1.1.min.js"></script>
-    <script src="https://cdnjs.cloudflare.com/ajax/libs/crypto-js/3.1.2/rollups/md5.js"></script>
     <script src="https://cdnjs.cloudflare.com/ajax/libs/materialize/0.97.8/js/materialize.min.js"></script>
     <script src="./app.js"></script>
 </body>
